kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: event-bus-config
            - secretRef:
                name: event-bus-secret
          image: rabbitmq:3.8.25-management-alpine
          name: event-bus
          ports:
            - containerPort: 15672
            - containerPort: 5672
          resources: {}
      restartPolicy: Always
