kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus
  labels:
    app: event-bus
spec:
  type: ClusterIP
  ports:
    - name: "amqp"
      port: 5672
      targetPort: 5672
    - name: "admin"
      port: 15672
      targetPort: 15672
  selector:
    app: event-bus
