kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-bus
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: event-bus
                port:
                  number: 15672
            path: /
